<resources>
    <string name="app_name" translatable="false">Dịch vụ nhà đất 247</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dangtai">Đang tải ... </string>
    <string name="tencongty">laptopnct.com</string>
    <string name="phienban">Phiên bản</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="app_id">201228337287213</string>
    <string name="api_map">AIzaSyB0g94pPy734rm45SiL9JCzMuCjyCrFOiw</string>
    <string name="dangnhapfacebook">Đăng nhập bằng Facebook</string>
    <string name="dangnhapbanggoogle">Đăng nhập bằng Google</string>
    <string name="dangnhapthanhcong">Đăng nhập thành công</string>
    <string name="quenmatkhau">Quên mật khẩu ?</string>
    <string name="dangkymoi"><u>Đăng ký mới</u></string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu ở trên </string>
    <string name="thongbaodangkythanhcong">Tạo tài khoản thành công </string>
    <string name="dangxuly">Đang xử lý </string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ !</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmatkhau">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="guimail">Gữi email</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ? </string>
    <string name="thongbaoemailkhonghople">Email không lệ !</string>
    <string name="thongbaoguimailthanhcong">Gữi email thành công !</string>
    <string name="odau">Ở đâu</string>



    <string name="timnha">Tìm nhà ?</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">HCM</string>
    <string name="gantoi">Gần tôi</string>
    <string name="datcoc">Đặt cọc </string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs </string>
    <string name="topmember">Top thành viên</string>
    <string name="datphong">Đặt phòng </string>
    <string name="taianh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="binhluan">Bình luận</string>
    <string name="checkin">Check-in</string>
    <string name="chiase">Chia sẽ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="capnhatwifi">Cập nhật wifi</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="dongy">Đồng ý</string>
    <string name="loithemwifi">Vui lòng nhập đầy đủ thông tin wifi</string>
    <string name="themthanhcong">Thêm thành công ! </string>
    <string name="dang">Đăng</string>
    <string name="thucdon">Thực đơn</string>
    <string name="tencty">Tên Công Ty</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khongcoc">Không cọc</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenphong">Tên Phòng/Nhà</string>
    <string name="giatien">Giá tiền</string>
    <string name="luucongty">Lưu Công Ty</string>
    <string name="themdichvu">Thêm Dịch Vụ</string>
</resources>
