<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bella"

    >

    <RelativeLayout
        android:backgroundTint="@color/transparentBackgroundDangnhap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="103dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="50dp">


            <EditText
                android:id="@+id/edEmailDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/edPasswordDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            `

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/transparentBackgroundDangnhap"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/dangnhap"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/hoac"
                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

            </LinearLayout>


            <Button
                android:id="@+id/btnDangNhapFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorFacebook"
                android:backgroundTint="@color/transparentBackgroundDangnhap"
                android:drawableLeft="@drawable/icon_facebook"
                android:paddingLeft="10dp"
                android:text="@string/dangnhapfacebook"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnDangNhapGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/transparentBackgroundDangnhap"
                android:drawableLeft="@drawable/icon_google"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dangnhapbanggoogle"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQuenMatKhau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quenmatkhau"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/txtDangKyMoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dangkymoi"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>