<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.FlashScreenActivity"
    android:background="@drawable/bella"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/transparentBackgroundDangnhap"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="229dp"
            android:layout_height="98dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="153dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logoflash" />

        <TextView
            android:id="@+id/txTenApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/txtPhienban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/phienban"
            android:textColor="?android:attr/colorActivatedHighlight" />

        <TextView
            android:id="@+id/txtTenCongTy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tencongty"
            android:textColor="@color/colorkitu" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:indeterminateTint="@color/colorAccent" />

            <TextView
                android:id="@+id/txtTai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dangtai"
                android:textColor="@color/colorkitu"
                android:textColorHighlight="@color/colorPrimary"
                tools:text="@string/dangtai" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>